Renamed css classes to fix styling for dark mode

--- a/client/src/styles/dark-mode.scss
+++ b/client/src/styles/dark-mode.scss
@@ -7,7 +7,7 @@ body.dark {
     color: $dark-text;
   }
 
-  #filter-search {
+  #search-filter {
     .search-container,
     .filter-container {
       box-shadow: 1px 1px 4px 2px rgba(0%, 0%, 0%, 0.1);
@@ -43,7 +43,7 @@ body.dark {
     }
   }
 
-  #countries {
+  #country-list {
     .loader,
     .not-found {
       color: $dark-text;
